<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="200dp"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/background1">

    <LinearLayout
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_dialog_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:id="@+id/image_dialog_title"
            android:hint="@string/add_post_dialog_title"
            android:textColorHint="@color/primary1"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2.5dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/primary1"
            app:hintTextColor="@color/primary1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:backgroundTint="@color/primary1"
                android:layout_height="match_parent"
                android:fontFamily="@font/custom_regular"
                android:inputType="text"
                android:textColor="@color/primary1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/image_dialog_image_group"
            android:hint="@string/add_image_group"
            android:textColorHint="@color/primary1"
            app:helperTextEnabled="true"
            app:helperText="@string/add_image_group_helper"
            app:helperTextTextColor="@color/primary1"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2.5dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/primary1"
            app:hintTextColor="@color/primary1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:backgroundTint="@color/primary1"
                android:layout_height="match_parent"
                android:fontFamily="@font/custom_regular"
                android:inputType="text"
                android:textColor="@color/primary1" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:id="@+id/image_dialog_spinner"
            android:visibility="gone"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginVertical="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="@font/custom_bold"
                    android:layout_marginHorizontal="10dp"
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_post_dialog_category"
                    android:textColor="@color/primary1"/>

                <Spinner
                    android:layout_margin="5dp"
                    android:id="@+id/category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        <View
            android:layout_marginHorizontal="40dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/primary1"/>


        <LinearLayout
            android:id="@+id/button_holder"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/image_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/custom_semibold"
                android:text="@string/add_post_dialog_cancel_post"
                android:textColor="@color/primary1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/image_dialog_select"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginHorizontal="15dp"
                android:padding="5dp"
                android:background="@drawable/custom_button_template_2"
                android:backgroundTint="@color/primary1"
                android:text="@string/add_image_select_image"/>

            <Button
                android:id="@+id/image_dialog_upload"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:padding="5dp"
                android:background="@drawable/custom_button_template_2"
                android:backgroundTint="@color/primary1"
                android:text="@string/add_image_upload_image"/>


        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>