<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary1"
    android:padding="30dp"
    tools:context=".Common.LoginSignup.Login"
    android:transitionName="transition_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/general_back_button"
            android:onClick="callBackButtonClicked"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/custom_special_epic"
            android:text="@string/retailer_login"
            android:textAllCaps="true"
            android:textColor="@color/background1"
            android:textSize="40sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/retailer_login_username"
                app:hintTextColor="@color/background1"
                app:boxStrokeColor="@color/background1"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2.5dp"
                app:startIconDrawable="@drawable/my_profile_icon"
                app:startIconTint="@color/background1"
                app:endIconMode="clear_text"
                app:endIconTint="@color/background1"
                android:textColorHint="@color/background1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/custom_regular"
                    android:textColor="@color/background1"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/retailer_login_password"
                app:hintTextColor="@color/background1"
                app:boxStrokeColor="@color/background1"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2.5dp"
                app:startIconDrawable="@drawable/lock_icon"
                app:startIconTint="@color/background1"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/background1"
                android:textColorHint="@color/background1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/custom_regular"
                    android:textColor="@color/background1"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/retailer_login_rememberme"
                    android:buttonTint="@color/background1"
                    android:textColor="@color/background1"
                    android:layout_centerVertical="true"
                    android:textAllCaps="true"/>

                <Button
                    android:textColor="@color/background1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retailer_login_forgottenpasword"
                    android:background="#00000000"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background1"
                android:text="@string/retailer_login"
                android:textColor="@color/primary1"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/custom_extra_bold"
                android:onClick="callLogin"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:fontFamily="@font/custom_bold"
                android:textColor="@color/background1"
                android:text="@string/retailer_login_create_account"
                android:onClick="callToSignUp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>