<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:minWidth="200dp"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/secondary1">

    <RelativeLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/input"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <!-- TODO Meg kell hogy csinalni a body expanding et-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/post_dialog_title"
                android:hint="@string/add_post_dialog_title"
                android:textColorHint="@color/primary1"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2.5dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primary1"
                app:hintTextColor="@color/primary1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/primary1"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/custom_regular"
                    android:inputType="text"
                    android:textColor="@color/primary1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/post_dialog_body"
                android:hint="@string/add_post_dialog_body"
                android:textColorHint="@color/primary1"
                app:boxStrokeColor="@color/text_input_box_stroke"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2.5dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primary1"
                app:hintTextColor="@color/primary1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/custom_regular"
                    android:inputType="text"
                    android:textColor="@color/primary1" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:background="@color/primary1"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginVertical="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="@font/custom_bold"
                    android:layout_marginHorizontal="10dp"
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_post_dialog_category"
                    android:textColor="@color/background1"/>

                <Spinner
                    android:layout_margin="5dp"
                    android:id="@+id/category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_marginHorizontal="40dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/primary1"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="15dp"
            android:gravity="end"
            android:layout_below="@id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/custom_semibold"
                android:text="@string/add_post_dialog_cancel_post"
                android:textColor="@color/primary1"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/send_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/custom_bold"
                android:text="@string/add_post_dialog_send_post"
                android:textColor="@color/primary1"
                android:textSize="20dp" />
        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>