<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/miku_pink"
    tools:context=".Common.SecondFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/circle_blank_black" />

        <ImageView
            android:layout_marginLeft="8dp"
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/circle_filled_black" />
        <ImageView
            android:layout_marginLeft="8dp"
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/circle_blank_black" />
    </LinearLayout>

    <TextView
        android:id="@+id/fragment2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/custom_special_epic"
        android:text="@string/fragment2_title_name"
        android:textColor="@color/background1"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:fontFamily="@font/custom_regular"
        android:padding="25dp"
        android:id="@+id/fragment2_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/background1"
        android:textSize="30sp"
        android:text="@string/fragment1_description_name"
        app:layout_constraintBottom_toTopOf="@+id/fragment2_bell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment2_title" />

    <ImageView
        android:id="@+id/fragment2_bell"
        android:layout_width="200dp"
        android:layout_height="200dp"

        android:layout_marginBottom="92dp"
        android:src="@drawable/tune_notification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView

        android:onClick="skipCall"
        android:fontFamily="@font/custom_semibold"
        android:id="@+id/skip_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="1"
        android:text="@string/skip_name"
        android:textColor="@color/background1"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>